error handaling and show good message

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,4 @@
-/* google font poppins */
+/* Import fonts for Bangla and English */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap');
 
 @tailwind base;
